--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
+/* Importar fuentes */
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-/* Importar fuentes */
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 
 /* Definir Averta como fallback */
 @font-face {
@@ -21,7 +21,12 @@ body {
   font-family: 'Manrope', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Averta', 'Montserrat', sans-serif;
 }
 
